# second_prac_CUDA

./: CMakeLists.txt  README.md  adi3d_cpu.cpp  adi3d_gpu.cu  compare.cpp  makefile
